switched from swagger autogen to swagger jsdoc
